# variant-scorer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: jobscript.sh  score_variants.crc.sh  score_variants.neuro.sh  score_variants.sherlock.neuro.sh
scripts/: get_caqtl_data.sh
src/: hitcaller_variant.py  main.py  peak_generator.py  snp_generator.py  variant_annotation.py  variant_scoring.all_chroms.peak_perc.py  variant_scoring.all_chroms.py  variant_scoring.chunks.py  variant_scoring.per_chrom.py  variant_scoring.per_chrom.shuf_pvals.py  variant_scoring.per_chunk.py  variant_scoring.py  variant_scoring.shuf_pvals.py  variant_scoring_per_chrom.py  variant_scoring_per_chunk.py  variant_shap.all_chroms.py  variant_shap.py  variant_summary_across_folds.py  variants_to_regions.py
src/examples/: score_variants.crc.sh  score_variants.neuro.sh
src/generators/: peak_generator.py  snp_generator.py  variant_generator.py
src/motif_finder/: call_motifs.py  modisco_to_jaspar.py  modisco_to_meme.py
src/old/: old.variant_scoring.per_chrom.shuf_pvals.py  old_chunks.py
src/utils/: argmanager.py  helpers.py  io.py  losses.py  shap_utils.py
test/: test.forward_only.sh  test.per_chrom.forward_only.sh  test.per_chrom.sh
tests/: conftest.py  test_load_bed_files.py  test_load_variant_table.py  test_one_hot.py  test_variant_annotation.py  test_variant_scoring.py
tests/archive/: test.annotations.sh  test.per_chrom.forward_only.sh  test.sh
tests/data/: caqtls.african.lcls.benchmarking.subset.tsv  test.anno_input.tsv  test.bed  test.chrombpnet.tsv  (+9 more)
(+1 files in other folders)
